# FastAPI-The-Complete-Course

./: .envrc  .gitignore  README.md  pyproject.toml  techstack.md  techstack.yml
Project 1/: books.py
Project 2/: books2.py
