[project]
name = "fastapi-the-complete-course"
version = "0.1.0"
description = "FastAPI Complete Course - Learning Projects"
readme = "README.md"
requires-python = ">=3.11,<3.14"
authors = [{ name = "Donald Wilson", email = "donaldww@icloud.com" }]
dependencies = [
  "anyio>=4.0.0",
  "bcrypt>=4.1.0",
  "cryptography>=41.0.0",
  "fastapi>=0.110.0",
  "openai>=1.0.0",
  "passlib[bcrypt]>=1.7.4",
  "psycopg2-binary>=2.9.9",
  "pydantic>=2.0.0",
  "pymysql>=1.1.0",
  "python-dotenv>=1.0.0",
  "python-jose[cryptography]>=3.3.0",
  "python-multipart>=0.0.6",
  "pyyaml>=6.0.1",
  "sqlalchemy>=2.0.23",
  "uvicorn[standard]>=0.24.0",
]

[tool.uv]
dev-dependencies = []
package = false
